--- a/src/components/style/layout.module.css
+++ b/src/components/style/layout.module.css
@@ -1,7 +1,12 @@
 .layout {
     height: 92vh;
     position: relative;
-    background-size:auto;
+    background-image: linear-gradient(
+    to right bottom ,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2)), 
+    url("C:\Users\omare\OneDrive\Desktop\3een_\src\img\shot2.jpg");
+    background-size:cover;
     background-position: top ;
     padding-top: 8vh;
     overflow: hidden;
