--- a/src/components/style/layout.module.css
+++ b/src/components/style/layout.module.css
@@ -1,3 +1,4 @@
+
 .layout {
     height: 92vh;
     position: relative;
@@ -5,10 +6,10 @@
     to right bottom ,
     rgba(0, 0, 0, 0.2),
     rgba(0, 0, 0, 0.2)), 
-    url("C:\Users\omare\OneDrive\Desktop\3een_\src\img\shot2.jpg");
-    background-size:cover;
-    background-position: top ;
-    padding-top: 8vh;
+    url("shot2.jpg");
+    background-size: cover;
+    background-position: 0 -2%;
+    padding-top: 10vh;
     overflow: hidden;
     background-repeat: no-repeat;    
 }
