--- a/src/components/style/Slider.module.css
+++ b/src/components/style/Slider.module.css
@@ -1,20 +1,22 @@
 .container{
-    position: absolute;
-    width:650px;
+    position: relative;
     height: 70vh;
-    background-color: rgba(10,10,10,0.08);
-    box-shadow: 0px 0px 1px rgba(225,225,225,0.6);
-
-    left: 28.75%;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
 }
 
+.contain{
+    position: relative;
+    width: 40%;
+    left: 28%;
+    background-color: rgba(10,10,10,0.08);
+    box-shadow: 0px 0px 1px rgba(225,225,225,0.6);
+    padding: 2%;
+}
 
 .container ul{
-    position: relative;
-    display: inline-block;
-    gap: 5%;
-
-    align-items: center;
+    padding-top: 2%;
 }
 
 .container ul h3{
@@ -24,8 +26,6 @@
     letter-spacing: 2px;
     font-size: 22px;
     color: rgba(225,225,225,0678);
-
-    top:400px;
 }
 
 .container span{
@@ -38,7 +38,6 @@
     display: inline-block;
 
     margin: 10px;
-    top:420px;
 }
 
 .container span:hover{
@@ -47,74 +46,46 @@
 }
 
 .container .book{
-    position: absolute;
+    position: relative;
 
-    width: 500px;
-    height: 320px;
+    width: 100%;
+    height: 50vh;
 
     border: 1px solid black;
     box-shadow: 5px 5px 20px black;
 
-    left: 11%;
-    top: 2%;
+    margin: 0;
+    padding: 0;
+
 }
 
 .container .book:hover{
     opacity: 0.95;
 }
 
-@media screen and (max-width: 1000px) {
-    .container {
-        left: 18%;
-        width:450px;
-        height: 50vh;
+@media screen and (max-width: 500px) {
+    .contain{
+        width: 70%;
+        left:15%;
     }
 
     .container ul h3{
         font-size: 18px;
-        top:300px;
-    }
-
-    .container .book{
-        position: absolute;
-    
-        width: 400px;
-        height: 40vh;
-        left: 5.5%;
-        top: 2%;
     }
 
     .container span{
-        top:300px;
-        width:13px;
-        height: 13px;
+        width: 12px;
+        height: 12px;
     }
 }
 
-@media screen and (max-width: 500px) {
-    .container {
-        left: 15%;
-        width:350px;
-        height: 35vh;
+@media screen and (max-width: 800px) {
+    .contain{
+        width: 80%;
+        left: 10%;
     }
 
     .container ul h3{
         font-size: 15px;
-        top:255px;
-    }
-
-    .container .book{
-        position: absolute;
-    
-        width: 300px;
-        height: 30vh;
-        left: 8%;
-        top: 2%;
-    }
-
-    .container span{
-        top:260px;
-        width:10px;
-        height: 10px;
     }
 }
