--- a/src/components/style/Review.module.css
+++ b/src/components/style/Review.module.css
@@ -29,3 +29,11 @@
     align-items: center;
     align-self: center;
 }
+
+
+@media screen and (max-width: 500px){
+    .vContainer {
+        padding-bottom: 2rem;
+        height: 65vh;
+    }
+}
