--- a/src/pades/style/productDetails.module.css
+++ b/src/pades/style/productDetails.module.css
@@ -21,22 +21,23 @@
     width: 45rem;
 }
 .details h1 {
+    position: relative;
     color: rgb(188,253,76);
     font-size: 5rem;
     font-weight: 400;
-    left: 5rem;
 }
 .details p {
     color: rgba(255, 255, 255, 0.671);
     font-size: 3rem;
 }
 .price {
-    margin: 2rem;
     border-top: solid 1px;
     border-bottom: solid 1px;
     border-color: rgba(188, 253, 76, 0.267);
     padding: 1rem;
-    width: 100%;
+    width: 95%;
+
+    margin-bottom: 2rem;
 }
 .container {
     position: relative;
@@ -49,6 +50,7 @@
     -ms-user-select: none;
     user-select: none;
     display: flex;
+
   }
 
   .container h4 {
@@ -154,4 +156,15 @@
 
 .soldout {
     background-color: #333;
+}
+
+@media screen and (max-width: 500px) {
+    .details h1 { 
+        font-size: 4rem;
+        margin-top: 10px;
+    }
+    .container h4 {
+        font-weight: 200;
+        font-size: 2rem;
+  }
 }
