--- a/src/components/style/DetailsImg.module.css
+++ b/src/components/style/DetailsImg.module.css
@@ -49,5 +49,9 @@
     background-color: rgba(10,10,10,0.5);
 }
 
-
+@media screen and (max-width: 500px){
+    .image {
+        height: 350px;
+    }
+}
 
