--- a/src/components/style/footer.module.css
+++ b/src/components/style/footer.module.css
@@ -4,7 +4,7 @@
     color: white;
     padding: 1rem;
     border: none;
-    border-top: 1px solid rgb(188,253,76);
+    border-top: 1px solid rgb(247, 160, 84);
 }
 .logo {
     width: 5rem;
