--- a/src/components/style/DetailsImg.module.css
+++ b/src/components/style/DetailsImg.module.css
@@ -45,7 +45,7 @@
 
 .leftarrow:hover, 
 .rightarrow:hover{
-    color: rgb(188,253,76);
+    color: rgb(247, 160, 84);
     background-color: rgba(10,10,10,0.5);
 }
 
