--- a/src/components/style/Form.module.css
+++ b/src/components/style/Form.module.css
@@ -58,11 +58,11 @@
 .shape .userbox .input:focus ~ .label{
     font-size: 14px;
     top: -20px;
-    color: rgb(188,253,76);
+    color: rgb(247, 160, 84);
 }
 
 button {
-    color: rgb(188,253,76);
+    color: rgb(247, 160, 84);
     border: 0.2px solid white;
     border-radius: 5px;
     background-color:  transparent;
@@ -79,10 +79,10 @@ button {
 }
 
 button:hover{
-    background-color: rgba(188,253,76, 0.6);
+    background-color: rgba(247, 160, 84, 0.6);
     color: white;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgb(188,253,76, 0.8);
+    box-shadow: 0 0 10px rgba(247, 160, 84, 0.8);
     cursor: pointer;
 }
 
