--- a/src/components/style/Info.module.css
+++ b/src/components/style/Info.module.css
@@ -10,12 +10,12 @@
 
     background-color: rgba(10, 10, 10);
     border-bottom: 0.4px solid;
-    border-color: rgb(188,253,76, 0.4);
+    border-color: rgba(247, 160, 84, 0.4);
 }
 
 .inf p {
     margin-bottom: 4rem;
-    color: rgb(188,253,76);
+    color: rgb(247, 160, 84);
 }
 
 
