--- a/src/components/style/card.module.css
+++ b/src/components/style/card.module.css
@@ -19,7 +19,7 @@ cursor: pointer;
 }
 .cardInfo {
     text-align: center;
-    color: rgb(188,253,76);
+    color: rgb(247, 160, 84);
     font-size: 2rem;
     font-weight: 400;
     text-transform: capitalize;
