--- a/src/components/style/cardsrow.module.css
+++ b/src/components/style/cardsrow.module.css
@@ -14,7 +14,7 @@
 }
 
 .cardContainer h1 {
-    color: rgb(188,253,76);
+    color: rgb(247, 160, 84);
     font-size: 3.5rem;
     font-weight: 400;
     
