--- a/src/pades/style/allproducts.module.css
+++ b/src/pades/style/allproducts.module.css
@@ -9,7 +9,7 @@ padding-top: 10rem;
 }
 .allproductContainer h1 {
     text-align: center;
-    color: rgb(188,253,76);
+    color: rgb(247, 160, 84);
     font-size: 5rem;
     font-weight: 400;
     text-transform: uppercase;
