--- a/src/components/style/SliderR.module.css
+++ b/src/components/style/SliderR.module.css
@@ -46,6 +46,7 @@
     padding: 10px;
     border-radius: 15%;
     font-size: 5rem;
+    z-index: 2;
 }
 
 .leftarrow {
@@ -59,6 +60,7 @@
     border-radius: 15%;
     align-self: center;
     font-size: 20rem;
+    z-index: 2;
 }
 
 .leftarrow:hover, 
