--- a/src/components/style/card.module.css
+++ b/src/components/style/card.module.css
@@ -46,12 +46,15 @@ cursor: pointer;
     position: absolute;
     display: flex;
     align-items: center;
+	justify-content: center;
     background-color: rgb(196, 196, 196);
     padding: 10px;
     border-radius: 5px;
 
-    top: 15rem;
-    left: 4rem;
+	width: 70%;
+    top: 50%;
+    left: 50%;
+	transform: translate(-50%, -50%);
 }
 .soldOut {
     text-align: center;
